# NKU-640

./: .gitignore  404.html  index.html  mkdocs.yml  versions.html
docs/: index.md
homework3/: index.html
homework4/python-version/: .dockerignore  .env.example  .gitignore  API_CONTRACT.md  Dockerfile  QUICKSTART.md  README.md  SAFETY_RULES.md  VALIDATION_CHECKLIST.md  deployment-info.txt  docker-compose.yml  index.html  pyproject.toml  todo-api-key.pem
homework4/python-version/API/: index.html
homework4/python-version/app/: __init__.py  config.py  database.py  main.py
homework4/python-version/app/models/: __init__.py  list.py  task.py  token_blacklist.py  user.py
homework4/python-version/app/routers/: __init__.py  auth.py  lists.py  tasks.py  users.py
homework4/python-version/app/schemas/: __init__.py  list.py  task.py  user.py
homework4/python-version/app/services/: __init__.py  auth.py  jwt.py
homework4/python-version/app/utils/: __init__.py  security.py  validators.py
homework4/python-version/bruno/: Health Check.bru  bruno.json
homework4/python-version/bruno/Auth/: Get Profile.bru  Login.bru  Logout.bru  Signup.bru
homework4/python-version/bruno/Lists/: Create List.bru  Delete List.bru  Get All Lists.bru  Get List by ID.bru  Update List.bru
homework4/python-version/docker/: nginx.conf
homework4/python-version/scripts/: cleanup-aws.sh  deploy-ec2.sh  run.sh  setup.sh
homework4/python-version/tests/: __init__.py  conftest.py  test_auth.py  test_health.py  test_lists.py  test_tasks.py
homework4/python-version/tutorial/: index.html
(+149 files in other folders)
